[package]
name = "pdb"
version = "0.1.0"
authors = ["jrieck <jack.rieck@sendgrid.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx-isa = { version = "0.3", features = ["sgxstd"] }
rand = "0.7"
aes = "0.3"
rocksdb = "0.14"
bincode = "1.2"
socket2 = { version = "0.3", features = ["unix"] }
serde = { version = "1.0", features = ["derive"] }
