[package]
name = "dal"
version = "0.1.0"
authors = ["jrieck <jackdrieck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.14"
serde = { version = "1.0", features = ["derive"] }
lib = { path = "../lib"}