[package]
name = "lib"
version = "0.1.0"
authors = ["jrieck <jackdrieck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx-isa = { version = "0.3", features = ["sgxstd"] }
rand = "0.7"
aes = "0.3"
bincode = "1.2"
serde = { version = "1.0", features = ["derive"] }
